resize some pic/try to fix squished img on phone

--- a/htdocs/style.scss
+++ b/htdocs/style.scss
@@ -7,13 +7,6 @@ $text-font: monospace;
 }
 
 
-.my-video {
-    width: 100%;
-    height: auto;
-}   
-
-
-
 .landing {
     
     text-align: center;
@@ -66,6 +59,7 @@ $text-font: monospace;
 }
 .row {
     display: flex;
+    flex-wrap: wrap;
     padding: 1px;
     font-family: $text-font;
     font-size: 12px;
@@ -73,19 +67,19 @@ $text-font: monospace;
   
 .column {
     flex: 50%;
+    max-width: 50%;
     padding: 0px;
 }  
-
-.row-program {
-    display: flex;
-    padding: 1px;
-    font-family: $text-font;
-    font-size: 12px;
-}
-  
-.column-program {
-    flex: 33%;
-    padding: 5px;
-}
+.column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+  }
+@media screen and (max-width: 600px) {
+    .column {
+      flex: 100%;
+      max-width: 100%;
+    }
+  }
   
 
